--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <button class="digit">7</button>
         <button class="digit">8</button>
         <button class="digit">9</button>
-        <button class="operation" name="div" style="font-size: 1.1em">÷</button>
+        <button class="operation" name="div">÷</button>
         <button class="digit">4</button>
         <button class="digit">5</button>
         <button class="digit">6</button>
